--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {},
   "dependencies": {
     "axios": "^0.23.0",
+    "cloudinary": "^1.27.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
